# stacked_batch_chamfer_distance

./: .env  pyproject.toml
src/sbcd/: _backends.py  _benchmark.py
src/sbcd/_C/: sbcd.cpp  sbcd_cuda.cpp  sbcd_cuda.cu
