[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sbcd"
version = "0.0.0"
authors = [{ name = "Cody Martin", email = "codycmar10@gmail.com" }]
description = "All-against-all chamfer distance for graphs or point sets"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["torch>=2", "torch_geometric", "einops"]

[project.urls]
"Homepage" = "https://github.com/cody-mar10/stacked_batch_chamfer_distance"
"Bug Tracker" = "https://github.com/cody-mar10/stacked_batch_chamfer_distance/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sbcd = ["*.cpp", "*.cu", "*.h"]

[tool.ruff]
src = ["src"]
line-length = 90

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"] # allow unused imports in `__init__.py`

[tool.coverage.run]
plugins = ["covdefaults"]
